# fastAPI_tutorial

./: .gitignore  README.md  main.py  requirements.txt  test.db  test_api.py
01_To_06/: README.md
01_To_06/fastapi-frontend/: README.md  package-lock.json  package.json
01_To_06/fastapi-frontend/src/components/: Home copy.vue
07_fastapi_database/: .gitignore  main.py  pyproject.toml  test.db
08_FastAPI JWT/: database.py  schemas.py  test_main.py
08_FastAPI_JWT/: create_sercrets.py  main.py  models.py  pyproject.toml  schemas.py  test.db
fastapi-frontend/src/: App.vue
fastapi-frontend/src/components/: Home.vue
fastapi_database/: database.py  main.py  models.py  pyproject.toml  schemas.py  test.db
fastapi_database/__pycache__/: models.py
templates/: 01_index.html  02_index.html
