[project]
name = "fastapi-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi>=0.115.6",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "sqlalchemy>=2.0.36",
    "uvicorn==0.32.0",
]
